[package]
name = "gplay"
version = "0.0.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
description = "Google Play Tool"
repository = "https://github.com/jlyonsmith/gplay"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
easy-error = "1.0.0"
gcp_auth = "0.9.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.3"
yansi = "0.5.1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "gplay"
path = "src/bin/gplay.rs"
